--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+          <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
         <header class="cv-header">
           <div class="cv-inner">
@@ -132,7 +132,7 @@
 
           <section class="experience">
             <h2>EXPERIENCE</h2>
-            <div class="row">
+            <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content">
                   <h3>Company Name</h3>
@@ -153,7 +153,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content align-single-timeline">
                   <h3>Company Name</h3>
@@ -174,7 +174,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content align-single-timeline">
                   <h3>Company Name</h3>
@@ -197,7 +197,7 @@
           </section>
           <section class="education">
             <h2>EDUCATION</h2>
-            <div class="row">
+            <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content">
                   <h3>Company Name</h3>
@@ -218,7 +218,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content align-single-timeline">
                   <h3>Company Name</h3>
