Add relevant content, add styles for mobile.

--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@
         <header class="cv-header">
           <div class="cv-inner">
             <div class="row cv-header-section">
-              <div class="col-xs-7">
+              <div class="col-xs-5 col-sm-7">
                 <h1>SAMUEL <strong>SEAY</strong></h1>
                 <h2>SENIOR FULLSTACK DEVELOPER</h2>
               </div>
-              <div class="col-xs-5">
+              <div class="col-xs-7 col-sm-5">
                 <ul class="cv-timeline">
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <strong class="cv-timeline-list-item-label">Phone:</strong>
-                      <span class="cv-timeline-list-item-value">1234567890</span>
+                      <span class="cv-timeline-list-item-value">021 0244 5007</span>
                     </div>
                   </li>
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <strong class="cv-timeline-list-item-label">Address:</strong>
-                      <span class="cv-timeline-list-item-value">My address, street street</span>
+                      <span class="cv-timeline-list-item-value">28 Kaniere Ave, Heihei, Christchurch</span>
                     </div>
                   </li>
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <strong class="cv-timeline-list-item-label">Email:</strong>
-                      <span class="cv-timeline-list-item-value">thing@example.com</span>
+                      <span class="cv-timeline-list-item-value">samueljseay@gmail.com</span>
                     </div>
                   </li>
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
-                      <strong class="cv-timeline-list-item-label">Website:</strong>
-                      <span class="cv-timeline-list-item-value">www.example.com</span>
+                      <strong class="cv-timeline-list-item-label">Github:</strong>
+                      <span class="cv-timeline-list-item-value">github.com/samueljseay</span>
                     </div>
                   </li>
                 </ul>
@@ -67,7 +67,9 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <strong>I am</strong> a passionate web developer with a wide range of skills. I'm experienced with UI/UX, Accessibility and Single Page JavaScript frameworks,
+                        such as React, Ember and others. I'm also <strong>experienced</strong> with back-end development. I have recently got involved
+                        Elixir and maintain some open source libraries on Github. I've worked on several medium to large size Ruby on Rails applications as well.
                       </p>
                     </div>
                   </li>
@@ -75,48 +77,48 @@
                     <div class="cv-timeline-list-item-text">
                       <h3>SKILLS</H3>
                       <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">JavaScript</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 100%"></div>
                           </div>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">HTML / CSS</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 100%"></div>
                           </div>
                         </div>
 
-                        <div class="col-xs-6">
+                        <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">Accessibility</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 85%"></div>
                           </div>
                         </div>
 
-                        <div class="col-xs-6">
+                        <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">Elixir / Phoenix </span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 90%"></div>
                           </div>
                         </div>
 
-                        <div class="col-xs-6">
+                        <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">Ruby on Rails</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 70%"></div>
                           </div>
                         </div>
 
-                        <div class="col-xs-6">
+                        <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">Node.js</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 75%"></div>
                           </div>
                         </div>
 
-                        <div class="col-xs-6">
+                        <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">SQL</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 55%"></div>
@@ -135,8 +137,8 @@
             <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content">
-                  <h3>Company Name</h3>
-                  <p>AUGUST 2009 - SEPTEMBER 2010</p>
+                  <h3>Manuka Coalition</h3>
+                  <p>JUNE 2015 - PRESENT</p>
                 </div>
               </div>
 
@@ -145,7 +147,10 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <strong>Manuka Coalition</strong> is a small web development consultancy working for large
+                        clients internationally. During my time at Manuka I've worked on Ruby on Rails, Ember, React
+                        and Elixir/Phoenix applications for both our external clients and internal software development.
+                        If you have any questions about the specific projects I worked on and their details please ask.
                       </p>
                     </div>
                   </li>
@@ -156,8 +161,8 @@
             <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content align-single-timeline">
-                  <h3>Company Name</h3>
-                  <p>AUGUST 2009 - SEPTEMBER 2010</p>
+                  <h3>Orion Health</h3>
+                  <p>JANUARY 2014 - JUNE 2015</p>
                 </div>
               </div>
 
@@ -166,7 +171,11 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <strong>Advocating best practices</strong> was the hallmark of my time at Orion Health. I took a lead role
+                        in implementing accessibility, responsive behaviour and good code architecture for their Patient Portal system
+                        which connected patients with their clinical information. The original application was built with legacy technologies
+                        so during my time there I pushed for an update in the technology stack that would allow us to keep up
+                        with modern browsers including, building proof of concepts for moving from the YUI module system to es6 modules.
                       </p>
                     </div>
                   </li>
@@ -177,8 +186,8 @@
             <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content align-single-timeline">
-                  <h3>Company Name</h3>
-                  <p>AUGUST 2009 - SEPTEMBER 2010</p>
+                  <h3>Self Employed</h3>
+                  <p>SEPTEMBER 2013 - JANUARY 2014</p>
                 </div>
               </div>
 
@@ -187,7 +196,56 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <strong>As a freelance developer</strong> I built web applications in Ruby on Rails but also spent a lot of time
+                        in client side development with HTML5, CSS3 and front-end frameworks like Bootstrap.
+                        I built some single page application games in Moodle utilising Knockout.js. I also designed the DB schema and built front-end
+                        and back-end components for a Ruby on Rails based Education Management System.
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row timeline-row">
+              <div class="col-xs-3">
+                <div class="cv-text-content align-single-timeline">
+                  <h3>NV Interactive</h3>
+                  <p>JANUARY 2012 - SEPTEMBER 2013</p>
+                </div>
+              </div>
+
+              <div class="col-xs-9">
+                <ul class="cv-timeline single large">
+                  <li class="cv-timeline-list-item">
+                    <div class="cv-timeline-list-item-text">
+                      <p>
+                        <strong>My core responsibilities</strong> at NV Interactive involved building .NET/MSSQL web applications. I built a faceted search
+                        and other CRUD features for a complex Au Pair application and also built Umbraco CMS based sites with custom functionality.
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row timeline-row">
+              <div class="col-xs-3">
+                <div class="cv-text-content align-single-timeline">
+                  <h3>Intergen Ltd.</h3>
+                  <p>JANUARY 2012 - MAY 2013</p>
+                </div>
+              </div>
+
+              <div class="col-xs-9">
+                <ul class="cv-timeline single large">
+                  <li class="cv-timeline-list-item">
+                    <div class="cv-timeline-list-item-text">
+                      <p>
+                        <strong>My first job</strong> out of college was at Intergen as a C#/ASP.NET developer. I spent
+                        a large chunk of time there on an advanced agriculture system, that was an interactive single page
+                        application built in <strong>Knockout.js</strong> I also built much of the HTML/CSS components
+                        in the application (and aspects of the MVC backend as well). I pushed for our developers to get a better understanding of JavaScript as well.
                       </p>
                     </div>
                   </li>
@@ -195,13 +253,14 @@
               </div>
             </div>
           </section>
+
           <section class="education">
             <h2>EDUCATION</h2>
             <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content">
-                  <h3>Company Name</h3>
-                  <p>AUGUST 2009 - SEPTEMBER 2010</p>
+                  <h3>Weltec Institute of Technology</h3>
+                  <p>2011</p>
                 </div>
               </div>
 
@@ -210,7 +269,15 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <strong>Bachelor of Information Technology</strong> at the Weltec Institute of Technology.
+                      </p>
+                      <p>
+                        <strong>Awards</strong>
+
+                        <ul>
+                          <li>1st in I.T. school in 1st, 3rd year of Bachelor of I.T. at Weltec Institute of Technology. (2009, 2011)</li>
+  	                      <li>Top project award at Weltec Institute of Technology (2011) for developing and managing a wedding RSVP management system in MVC PHP.</li>
+                        </ul>
                       </p>
                     </div>
                   </li>
@@ -221,8 +288,8 @@
             <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content align-single-timeline">
-                  <h3>Company Name</h3>
-                  <p>AUGUST 2009 - SEPTEMBER 2010</p>
+                  <h3>High School Certificate</h3>
+                  <p>2001</p>
                 </div>
               </div>
 
@@ -231,7 +298,7 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        High School Certificate in <strong>English, History, Maori, Science and Maths.</strong>
                       </p>
                     </div>
                   </li>
