Update CV to include some recent experience.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                       <p>
                         <strong>I am</strong> a passionate web developer with a wide range of skills. I'm experienced with UI/UX, Accessibility and Single Page JavaScript frameworks,
                         such as React, Ember and others. I'm also <strong>experienced</strong> with back-end development. I have recently got involved
-                        Elixir and maintain some open source libraries on Github. I've worked on several medium to large size Ruby on Rails applications as well.
+                        with Elixir and maintain some open source libraries on Github. I've worked on several medium to large size Ruby on Rails applications as well.
                       </p>
+
+                      <p>More recently I've also had the opportunity to work with mobile apps in react-native and Android.</p>
                     </div>
                   </li>
                   <li class="cv-timeline-list-item">
@@ -69,6 +71,12 @@
                           <span class="cv-progress-label">JavaScript</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 100%"></div>
+                          </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6">
+                          <span class="cv-progress-label">Java</span>
+                          <div class="cv-progress-bar">
+                            <div class="cv-progress-bar-fill" style="width: 80%"></div>
                           </div>
                         </div>
                         <div class="col-xs-12 col-sm-6">
@@ -136,9 +144,13 @@
                     <div class="cv-timeline-list-item-text">
                       <p>
                         <strong>Manuka Coalition</strong> is a small web development consultancy working for large
-                        clients internationally. During my time at Manuka I've worked on Ruby on Rails, Ember, React
+                        clients internationally. During my time at Manuka I've worked on Ruby on Rails, Node.js, Ember, React
                         and Elixir/Phoenix applications for both our external clients and internal software development.
-                        If you have any questions about the specific projects I worked on and their details please ask.
+                      </p>
+                      <p>
+                        More recently I've also had the opportunity to work on mobile applications in react-native and
+                        Android. Android specifically has enabled me to become proficient in Java. If you would like more
+                        detail about specific projects I've worked on then please contact me to find out more.
                       </p>
                     </div>
                   </li>
