Update with recent skills and experience.

--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>I am</strong> a passionate web developer with a wide range of skills. I'm experienced with UI/UX, Accessibility and Single Page JavaScript frameworks,
-                        such as React, Ember and others. I'm also <strong>experienced</strong> with back-end development. I have recently got involved
-                        with Elixir and maintain some open source libraries on Github. I've worked on several medium to large size Ruby on Rails applications as well.
+                        <strong>I am</strong> a passionate full stack developer with a wide range of skills. I'm experienced with UI/UX, Accessibility and Single Page JavaScript frameworks,
+                        such as React, Ember and others. I'm also <strong>experienced</strong> with back-end development in Node.js, Elixir and less recently Ruby on Rails. In recent
+                        years I have also worked extensively with mobile development in Android and React Native. I have a strong interest in Flutter.
                       </p>
-
-                      <p>More recently I've also had the opportunity to work with mobile apps in react-native and Android.</p>
                     </div>
                   </li>
                   <li class="cv-timeline-list-item">
@@ -86,7 +84,7 @@
                         <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">Java</span>
                           <div class="cv-progress-bar">
-                            <div class="cv-progress-bar-fill" style="width: 80%"></div>
+                            <div class="cv-progress-bar-fill" style="width: 90%"></div>
                           </div>
                         </div>
                         <div class="col-xs-12 col-sm-6">
@@ -120,7 +118,7 @@
                         <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">Node.js</span>
                           <div class="cv-progress-bar">
-                            <div class="cv-progress-bar-fill" style="width: 75%"></div>
+                            <div class="cv-progress-bar-fill" style="width: 90%"></div>
                           </div>
                         </div>
 
@@ -143,13 +141,48 @@
             <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content">
-                  <h3>Manuka Coalition</h3>
-                  <p>JUNE 2015 - PRESENT</p>
+                  <h3>Atomic Ltd</h3>
+                  <p>MARCH 2018 - PRESENT</p>
                 </div>
               </div>
 
               <div class="col-xs-9">
                 <ul class="cv-timeline single large first">
+                  <li class="cv-timeline-list-item">
+                    <div class="cv-timeline-list-item-text">
+                      <p>
+                        <strong><a href='https://atomic.io'>Atomic.io</a></strong> was a design tooling startup when I first arrived there. We worked on a very complex React front-end with a 
+                        relatively simple Node.js backend. In my time on that project I worked on all aspects of the front and back end. I rearchitected chunks of the state
+                        management so that we could build more advanced features. I also worked on a backend implementation that allowed us to import designs from the Figma
+                        software tool.
+                      </p>
+
+                      <p>
+                        After some time we pivoted away from the old product to build a more business focussed enterprise tool based on knowledge we garnered from building designer tools. This involved
+                        the building out of several green-fields projects. Another developer and I lead the team towards microservices. The team had strong knowledge in Node.js so we built
+                        out our backends with koa and Node.js and our infrastructure was mainly Docker based. I also built out our security approach for passwordless authentication.
+                      </p>
+
+                      <p>
+                        After we built out the backend services, I took a lead on our SDK efforts, we needed to build developer tooling for Android, iOS and the web. We had a 2 person team
+                        and during that time I built out our native Android SDK and a Preact based web SDK.
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row timeline-row">
+              <div class="col-xs-3">
+                <div class="cv-text-content">
+                  <h3>Manuka Coalition</h3>
+                  <p>JUNE 2015 - MARCH 2018</p>
+                </div>
+              </div>
+
+              <div class="col-xs-9">
+                <ul class="cv-timeline single large">
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
