Fix a styling bug.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
             <div class="row timeline-row">
               <div class="col-xs-3">
-                <div class="cv-text-content">
+                <div class="cv-text-content align-single-timeline">
                   <h3>Manuka Coalition</h3>
                   <p>JUNE 2015 - MARCH 2018</p>
                 </div>
