Add more details of my recent Android experience.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>I am</strong> a passionate full stack developer with a wide range of skills. I'm experienced with UI/UX, Accessibility and Single Page JavaScript frameworks,
+                        <strong>I am</strong> a passionate full stack developer with a <strong>wide range</strong> of skills. I'm experienced with UI/UX, Accessibility and Single Page JavaScript frameworks,
                         such as React, Ember and others. I'm also <strong>experienced</strong> with back-end development in Node.js, Elixir and less recently Ruby on Rails. In recent
-                        years I have also worked extensively with mobile development in Android and React Native. I have a strong interest in Flutter.
+                        years I have also worked extensively with mobile development in Android and React Native.
                       </p>
                     </div>
                   </li>
@@ -87,6 +87,14 @@
                             <div class="cv-progress-bar-fill" style="width: 90%"></div>
                           </div>
                         </div>
+                        
+                        <div class="col-xs-12 col-sm-6">
+                          <span class="cv-progress-label">Kotlin</span>
+                          <div class="cv-progress-bar">
+                            <div class="cv-progress-bar-fill" style="width: 85%"></div>
+                          </div>
+                        </div>
+
                         <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">HTML / CSS</span>
                           <div class="cv-progress-bar">
@@ -166,6 +174,10 @@
                       <p>
                         After we built out the backend services, I took a lead on our SDK efforts, we needed to build developer tooling for Android, iOS and the web. We had a 2 person team
                         and during that time I built out our native Android SDK and a Preact based web SDK.
+                      </p>
+
+                      <p>The <strong>Android SDK</strong> has been one of the most interesting experiences during my time at Atomic. It was required that the SDK be built as an embeddable
+                        UI framework, which meant solving some of the toughest problems I've had to solve in Android and I've learned a lot from that process.
                       </p>
                     </div>
                   </li>
