Update my CV with my latest experience.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
-                        <strong>I am</strong> a passionate full stack developer with a <strong>wide range</strong> of skills. I'm experienced with UI/UX, Accessibility and Single Page JavaScript frameworks,
+                        <strong>I am</strong> a passionate full stack polyglot developer with a <strong>wide range</strong> of skills. I'm experienced with UI/UX, Accessibility and Single Page JavaScript frameworks,
                         such as React, Ember and others. I'm also <strong>experienced</strong> with back-end development in Node.js, Elixir and less recently Ruby on Rails. In recent
                         years I have also worked extensively with mobile development in Android and React Native.
+
+                        I'm always looking to learn new things and I'm excited by new challenges.
                       </p>
                     </div>
                   </li>
@@ -76,7 +78,7 @@
                       <h3>SKILLS</H3>
                       <div class="row">
                         <div class="col-xs-12 col-sm-6">
-                          <span class="cv-progress-label">JavaScript</span>
+                          <span class="cv-progress-label">JavaScript / TS</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 100%"></div>
                           </div>
@@ -131,6 +133,13 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-6">
+                          <span class="cv-progress-label">PHP / WP</span>
+                          <div class="cv-progress-bar">
+                            <div class="cv-progress-bar-fill" style="width: 75%"></div>
+                          </div>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6">
                           <span class="cv-progress-label">SQL</span>
                           <div class="cv-progress-bar">
                             <div class="cv-progress-bar-fill" style="width: 55%"></div>
@@ -149,13 +158,50 @@
             <div class="row timeline-row">
               <div class="col-xs-3">
                 <div class="cv-text-content">
-                  <h3>Atomic Ltd</h3>
-                  <p>MARCH 2018 - PRESENT</p>
+                  <h3>Automattic</h3>
+                  <p>JUNE 2020 - PRESENT</p>
                 </div>
               </div>
 
               <div class="col-xs-9">
                 <ul class="cv-timeline single large first">
+                  <li class="cv-timeline-list-item">
+                    <div class="cv-timeline-list-item-text">
+                      <p>
+                        <strong><a href='https://automattic.com'>Automattic</a></strong> is a distributed company working mainly on products
+                        within the Wordpress ecosystem.
+                      </p>
+
+                      <p>
+                        In my time at Automattic I've worked on a number of projects, including building out a single page application for
+                        the <a href='https://dayoneapp.com/'>Day One</a> app, with TypeScript / React / Vite and Node.js backend.
+                      </p>
+
+                      <p>
+                        I also worked extensively on the WooCommerce ecommerce plugin for Wordpress, building React / TS front-ends and extending
+                        PHP functionality of the plugin.
+                      </p>
+
+                      <p>
+                        More recently I've also been supporting our dev teams, by optimising our tooling using Turborepo / Webpack / Docker and other
+                        tools to make our dev environments more reliable and to support automating release processes.
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row timeline-row">
+              <div class="col-xs-3">
+                <div class="cv-text-content">
+                  <h3>Atomic Ltd</h3>
+                  <p>MARCH 2018 - JUNE 2020</p>
+                </div>
+              </div>
+
+              <div class="col-xs-9">
+                <ul class="cv-timeline single large">
                   <li class="cv-timeline-list-item">
                     <div class="cv-timeline-list-item-text">
                       <p>
